--- a/generators/app/templates/extra/package.json
+++ b/generators/app/templates/extra/package.json
@@ -1,19 +1,30 @@
 {
   "name": "<%= name %>",
   "version": "1.0.0",
-  "description": "",
+  "description": "<%= description %>",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "<%= author %>",
   "license": "<%= license %>",
-  "devDependences": {
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-router": "^3.0.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
   	"webpack": "^1.14.0",
   	"webpack-dev-server": "^1.16.2",
-  	"react": "^15.4.2",
-  	"react-router": "^3.0.2",
-  	"react-redux": "^5.0.2",
-  	"redux": "^3.6.0"
+    "mocha": "^3.2.0",
+    "istanbul": "^0.4.5",
+    "isparta": "^4.0.0",
+    "babel-node": "^6.5.2",
+    "babel-core": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-async-to-generator": "^6.22.0"
   }
 }
