--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
+    "deep-extend": "^0.4.1",
+    "fs-extra": "^2.0.0",
+    "lodash": "^4.17.4",
+    "yeoman-generator": "^1.0.0",
     "yosay": "^1.2.1"
   },
   "devDependencies": {
@@ -46,7 +49,7 @@
   "repository": "linuxb/generator-berries",
   "scripts": {
     "prepublish": "gulp prepublish",
-    "test": "gulp",
+    "test": "NODE_ENV=dev gulp",
     "clean": "rm -rf ../fake-yo-dir/reol/*"
   },
   "license": "MIT"
