--- a/generators/app/templates/extra/package.json
+++ b/generators/app/templates/extra/package.json
@@ -4,27 +4,49 @@
   "description": "<%= description %>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node server.js",
+    "backend": "node index.js",
+    "compile": "webpack --config webpack/conf.dev.js && open src/public/index.html",
+    "clean": "rm -rf src/public/dist/*",
+    "start": "pm2 start index.js && pm2 start server.js && open http://localhost:8000",
+    "kill": "pm2 delete all"
   },
   "author": "<%= author %>",
   "license": "<%= license %>",
   "dependencies": {
+    "express": "^4.14.0",
     "react": "^15.4.2",
-    "react-router": "^3.0.2",
+    "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
-  	"webpack": "^1.14.0",
-  	"webpack-dev-server": "^1.16.2",
-    "mocha": "^3.2.0",
-    "istanbul": "^0.4.5",
-    "isparta": "^4.0.0",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "babel-polyfill": "^6.22.0",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-async-to-generator": "^6.22.0"
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-eslint": "^7.1.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.0.0",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.0",
+    "eslint-plugin-react": "^6.0.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack-hot-middleware": "^2.15.0",
+    "pm2": "^2.4.0"
   }
 }
