--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
   "devDependencies": {
     "eslint": "^3.1.1",
     "eslint-config-xo-space": "^0.15.0",
+    "babel-eslint": "^7.1.0",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.0",
+    "eslint-plugin-react": "^6.0.0",
     "gulp": "^3.9.0",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^3.0.1",
